test/spec_vectors/simd_f64x2/fail/module_6.wat
(module (func $f64x2.min-arg-empty (result v128) (f64x2.min)))